device: fix configuring static ip addresses

When a connection had static IP addresses, an early event
from plaform would clear them from priv->con_ip4_config.

Fix that, by don't initializing priv->con_ip4_config
before we commit the first time.

https://bugzilla.gnome.org/show_bug.cgi?id=749052

Fixes: 557667df12fc05b76326d6406553985effeeb2ac
(cherry picked from commit 843205521fd45ee5e73b26696cc5f6b82853709c)